--- a/geradorestilo.css
+++ b/geradorestilo.css
@@ -33,7 +33,7 @@ div#cabecalho {
     word-spacing: 5%;
     line-height: 130%;
     border: 0px;
-    box-shadow: rgb(255, 244, 88) 0px 20px 30px -10px;
+    box-shadow: rgb(255, 244, 88) 0px 90px 40px 15px;
 }
 
 div#titulo {
@@ -52,9 +52,27 @@ div {
     margin-left: 120px;
     margin-right: 150px;
     padding: 10px;
-    box-shadow: rgb(224, 231, 238) 0px 20px 30px -10px;
+    box-shadow: rgb(224, 231, 238) 3px 2px 20px 1px;
     border-radius: 10px;
     border: 1px solid #2596be;
+}
+
+div#bancodestino {
+    text-align: center;
+}
+
+div#fim {
+    width: 420px;
+    background-color: black;
+    margin-top: 20px;
+    margin-left: 120px;
+    margin-right: 150px;
+    text-align: center;
+    align-items: center;
+    padding: 1px;
+    box-shadow: none;
+    border-radius: 10px;
+    border: 0px;
 }
 
 input {
@@ -84,8 +102,7 @@ select {
 }
 
 button {
-    margin-left: 190px;
-    margin-top: 20px;
+    margin-top: 2px;
     padding: 10px 30px;
     background-color: #fff;
     color: #2596be;
